# mattermail

./: .env  .justfile  Cargo.toml  Dockerfile  README.md  test.http
src/: mail.rs  main.rs  mattermost.rs  routes.rs
