[package]
name = "tgmail"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
async-imap = "0.6"
async-native-tls = "0.4"
async-std = {version = "1.12", features = ["attributes"]}
futures = "0.3"
imap-proto = "0.16"
html2md = "0.2"
email-parser = "0.5"
